Fix margin to text-align

--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,6 +1,5 @@
 div {background-color: red;
   color: white; 
   font-size: 32px;
-  margin: auto;
-  width: 50%;
+ text-align: center;
   font-weight: bold;}
